nav, main, offer

--- a/index.html
+++ b/index.html
@@ -31,8 +31,30 @@
         <a href="">Join Bootcamps</a>
     </div>
     <p>Trusted by 500,000 Designers in 150 countries</p>
-    <img src="http://placekitten.com/200/300"></img>
+    <img src="" alt="nike logo">
+    <img src="" alt="FedEx logo">
+    <img src="" alt="Amazon logo">
+    <img src="" alt="MAPFRE logo">
+    <img src="" alt="Segment logo">
+    <img src="" alt="Google logo">
+    <img src="" alt="IBM logo">
+    <img src="" alt="Porsche logo">
 </section>
 <section id="offer">
+<h6>Most Popular</h6>
+<h2>Our featured <span style="color:orange">courses</span></h2>
+<img src="" alt="Latin man">
+    <h4>Digital Marketing Strategy</h4>
+    <h6>Intermediate 2hour 10min</h6>
+    <div>
+        <a href="">Email now</a>
+    </div>
+<img src="" alt="Caucsian man">
+<img src="" alt="Caucsian man">
+<img src="" alt="Caucsian man">
+
+
+
+
 </section>
 </html>
