offer section complete

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <section id="main">
     <h6>Learning platform</h6>
     <h1>Grow now with
-    <span style="color:orange">digital skills</span></h1>
+        <span style="color:orange">digital skills</span></h1>
     <p>We hapilly cut through the noise and teach designers and devs personally</p>
     <div>
 
@@ -41,20 +41,31 @@
     <img src="" alt="Porsche logo">
 </section>
 <section id="offer">
-<h6>Most Popular</h6>
-<h2>Our featured <span style="color:orange">courses</span></h2>
-<img src="" alt="Latin man">
-    <h4>Digital Marketing Strategy</h4>
+    <h6>Most Popular</h6>
+    <h2>Our featured <span style="color:orange">courses</span></h2>
+    <img src="" alt="Latin man">
+    <h5>Digital Marketing Strategy</h5>
     <h6>Intermediate 2hour 10min</h6>
     <div>
         <a href="">Email now</a>
     </div>
-<img src="" alt="Caucsian man">
-<img src="" alt="Caucsian man">
-<img src="" alt="Caucsian man">
-
-
-
-
+    <img src="" alt="Caucsian man">
+    <h5>Digital Marketing Strategy</h5>
+    <h6>Intermediate 2hour 10min</h6>
+    <div>
+        <a href="">Email now</a>
+    </div>
+    <img src="" alt="Caucsian man">
+    <h5>Digital Marketing Strategy</h5>
+    <h6>Intermediate 2hour 10min</h6>
+    <div>
+        <a href="">Email now</a>
+    </div>
+    <img src="" alt="Caucsian man">
+    <h5>Digital Marketing Strategy</h5>
+    <h6>Intermediate 2hour 10min</h6>
+    <div>
+        <a href="">Email now</a>
+    </div>
 </section>
 </html>
