--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <title>Edukin</title>
 </head>
-
+<body>
 <nav>
     <ul>
-        <li><a href="">Courses</a></li>
-        <li><a href="">Bootcamps</a></li>
-        <li><a href="">Community</a></li>
-        <li><a href="">About</a></li>
-        <li><a href="">Pricing</a></li>
+        <li><a href="#">Courses</a></li>
+        <li><a href="#">Bootcamps</a></li>
+        <li><a href="#">Community</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Pricing</a></li>
     </ul>
     <div>
         <a>Sign in</a>
@@ -26,9 +26,9 @@
     <p>We hapilly cut through the noise and teach designers and devs personally</p>
     <div>
 
-        <a href="">Explore Courses</a>
+        <a href="#">Explore Courses</a>
 
-        <a href="">Join Bootcamps</a>
+        <a href="#">Join Bootcamps</a>
     </div>
     <p>Trusted by 500,000 Designers in 150 countries</p>
     <img src="" alt="nike logo">
@@ -43,29 +43,47 @@
 <section id="offer">
     <h6>Most Popular</h6>
     <h2>Our featured <span style="color:orange">courses</span></h2>
-    <img src="" alt="Latin man">
+    <img src="#" alt="Latin man">
+    <h5>Digital Marketing Strategy</h5>
+    <h6>Intermediate 2hour 10min</h6>
+    <div>
+        <a href="#">Email now</a>
+    </div>
+    <img src="#" alt="Caucsian man">
+    <h5>Digital Marketing Strategy</h5>
+    <h6>Intermediate 2hour 10min</h6>
+    <div>
+        <a href="#">Email now</a>
+    </div>
+    <img src="#" alt="Caucsian man">
     <h5>Digital Marketing Strategy</h5>
     <h6>Intermediate 2hour 10min</h6>
     <div>
         <a href="">Email now</a>
     </div>
-    <img src="" alt="Caucsian man">
+    <img src="#" alt="Indian man">
     <h5>Digital Marketing Strategy</h5>
     <h6>Intermediate 2hour 10min</h6>
     <div>
-        <a href="">Email now</a>
-    </div>
-    <img src="" alt="Caucsian man">
-    <h5>Digital Marketing Strategy</h5>
-    <h6>Intermediate 2hour 10min</h6>
-    <div>
-        <a href="">Email now</a>
-    </div>
-    <img src="" alt="Caucsian man">
-    <h5>Digital Marketing Strategy</h5>
-    <h6>Intermediate 2hour 10min</h6>
-    <div>
-        <a href="">Email now</a>
+        <a href="#">Email now</a>
     </div>
 </section>
+<section id="about">
+    <h6>The Edukin Advcantage</h6>
+    <h2>About the
+        <span style="color:orange">Edukin?</span></h2>
+    <p>Edukin online video learning platform is perfect for Product Designs teams and individuals to build skills and career confidence.</p>
+    <h4>Acces To Mentors</h4>
+    <p>Get personalized feedback from out experts. Learn from the best practitioners & mentors in the field.</p>
+</section>
+
+<footer>
+    <ul>
+        <li><a href="" target="_blank" >Instagram</a></li>
+        <li><a href="" target="_blank">Facebook</a></li>
+        <li><a href="" target="_blank">Twitter</a></li>
+        <li><a href="" target="_blank">YouTube</a></li>
+    </ul>
+</footer>
+</body>
 </html>
