drobné html ůpravy a nástavba css + přehlednější rozřazení tagů div, section atd...

--- a/index.html
+++ b/index.html
@@ -14,23 +14,25 @@
         <li><a href="#">Pricing</a></li>
     </ul>
     <div>
-        <a>Sign in</a>
-        <a>Sign up</a>
+        <a href="#">Sign in</a>
+        <a href="#">Sign up</a>
     </div>
 </nav>
 
 <section id="main">
+
     <h6>Learning platform</h6>
-    <h1>Grow now with
-        <span style="color:orange">digital skills</span></h1>
-    <p>We hapilly cut through the noise and teach designers and devs personally</p>
+    <h1>Grow now with <br>
+        <span style="color: orangered">digital skills</span></h1>
+    <p>We hapilly cut through the noise and teach designers and devs personally, taking <br>
+        a 100% learn-by-doing approach with a zero Powerpoint policy</p>
     <div>
 
         <a href="#">Explore Courses</a>
 
         <a href="#">Join Bootcamps</a>
     </div>
-    <p>Trusted by 500,000 Designers in 150 countries</p>
+    <h6>Trusted by 500,000 Designers in 150 countries</h6>
     <img src="" alt="nike logo">
     <img src="" alt="FedEx logo">
     <img src="" alt="Amazon logo">
@@ -42,36 +44,46 @@
 </section>
 <section id="offer">
     <h6>Most Popular</h6>
-    <h2>Our featured <span style="color:orange">courses</span></h2>
-    <img src="#" alt="Latin man">
-    <h5>Digital Marketing Strategy</h5>
-    <h6>Intermediate 2hour 10min</h6>
+    <h2>Our featured <span style="color:orangered">courses</span></h2>
     <div>
-        <a href="#">Email now</a>
+        <img src="#" alt="Latin man">
+        <article>
+            <h5>Digital Marketing Strategy</h5>
+            <h6>Intermediate 2hour 10min</h6>
+        </article>
+        <a href="#">Enroll now</a>
     </div>
-    <img src="#" alt="Caucsian man">
-    <h5>Digital Marketing Strategy</h5>
-    <h6>Intermediate 2hour 10min</h6>
     <div>
-        <a href="#">Email now</a>
+        <img src="#" alt="Caucsian man">
+        <article>
+            <h5>Digital Marketing Strategy</h5>
+            <h6>Intermediate 2hour 10min</h6>
+        </article>
+
+        <a href="#">Enroll now</a>
     </div>
-    <img src="#" alt="Caucsian man">
-    <h5>Digital Marketing Strategy</h5>
-    <h6>Intermediate 2hour 10min</h6>
     <div>
-        <a href="">Email now</a>
+        <img src="#" alt="Caucsian man">
+        <article>
+            <h5>Digital Marketing Strategy</h5>
+            <h6>Intermediate 2hour 10min</h6>
+        </article>
+
+        <a href="">Enroll now</a>
     </div>
-    <img src="#" alt="Indian man">
-    <h5>Digital Marketing Strategy</h5>
-    <h6>Intermediate 2hour 10min</h6>
     <div>
-        <a href="#">Email now</a>
+        <img src="#" alt="Indian man">
+        <article>
+            <h5>Digital Marketing Strategy</h5>
+            <h6>Intermediate 2hour 10min</h6>
+        </article>
+        <a href="#">Enroll now</a>
     </div>
 </section>
 <section id="about">
     <h6>The Edukin Advcantage</h6>
     <h2>About the
-        <span style="color:orange">Edukin?</span></h2>
+        <span style="color:orangered">Edukin?</span></h2>
     <p>Edukin online video learning platform is perfect for Product Designs teams and individuals to build skills and career confidence.</p>
     <h4>Acces To Mentors</h4>
     <p>Get personalized feedback from out experts. Learn from the best practitioners & mentors in the field.</p>
@@ -79,11 +91,64 @@
 
 <footer>
     <ul>
-        <li><a href="" target="_blank" >Instagram</a></li>
-        <li><a href="" target="_blank">Facebook</a></li>
-        <li><a href="" target="_blank">Twitter</a></li>
-        <li><a href="" target="_blank">YouTube</a></li>
+        <li><a href="#" target="_blank" >Instagram</a></li>
+        <li><a href="#" target="_blank">Facebook</a></li>
+        <li><a href="#" target="_blank">Twitter</a></li>
+        <li><a href="#" target="_blank">YouTube</a></li>
     </ul>
 </footer>
 </body>
 </html>
+
+<style>
+    nav > ul {
+        position: relative;
+        text-align: center;
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+    }
+    nav > ul > li {
+        display: inline-block;
+        padding: 10px;
+    }
+
+    nav > ul > li:hover {
+    }
+    nav > div {
+        position: absolute;
+        right: 0;
+        top: 28px;
+    }
+
+    #main {
+        text-align: center;
+    }
+    #main > h1 {
+        font-size: 40px;
+    }
+    #main > p {
+        font-size: 9px;
+    }
+    #offer {
+        text-align: center;
+        background-color: whitesmoke;
+    }
+    #about {
+        text-align: left;
+    }
+    #about > h2 {
+        font-size: 30px;
+    }
+    #offer > div {
+        display: inline-block;
+    }
+    footer > ul {
+        list-style-type: none;
+    }
+    body {
+        border: 8.7px lightgrey solid;
+        padding: 10px;
+        margin: 0;
+    }
+</style>
