--- a/index.html
+++ b/index.html
@@ -20,14 +20,12 @@
 </nav>
 
 <section id="main">
-
     <h6>Learning platform</h6>
     <h1>Grow now with <br>
         <span style="color: orangered">digital skills</span></h1>
     <p>We hapilly cut through the noise and teach designers and devs personally, taking <br>
         a 100% learn-by-doing approach with a zero Powerpoint policy</p>
     <div>
-
         <a href="#">Explore Courses</a>
 
         <a href="#">Join Bootcamps</a>
@@ -81,7 +79,7 @@
     </div>
 </section>
 <section id="about">
-    <h6>The Edukin Advcantage</h6>
+    <h6>The Edukin Advantage</h6>
     <h2>About the
         <span style="color:orangered">Edukin?</span></h2>
     <p>Edukin online video learning platform is perfect for Product Designs teams and individuals to build skills and career confidence.</p>
@@ -120,7 +118,6 @@
         right: 0;
         top: 28px;
     }
-
     #main {
         text-align: center;
     }
