loga a jejich uprava

--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
         <a href="#">Join Bootcamps</a>
     </div>
     <h6>Trusted by 500,000 Designers in 150 countries</h6>
-    <img src="" alt="nike logo">
-    <img src="" alt="FedEx logo">
-    <img src="" alt="Amazon logo">
-    <img src="" alt="MAPFRE logo">
-    <img src="" alt="Segment logo">
-    <img src="" alt="Google logo">
-    <img src="" alt="IBM logo">
-    <img src="" alt="Porsche logo">
+        <img src="loga/nike%20logo.png" height="33" width="75" alt="nike logo">
+        <img src="loga/fedex.png" height="33" width="75" alt="fedex logo"/>
+        <img src="loga/amazon.png" height="33" width="75" alt="amazon logo"/>
+        <img src="loga/madvre.png" height="33" width="75" alt="MAPFRE logo"/>
+        <img src="loga/segment.png" height="33" width="75" alt="Segment logo"/>
+        <img src="loga/google.png" height="33" width="75" alt="google logo"/>
+        <img src="loga/IBM.png" height="33" width="75" alt="IBM logo"/>
+        <img src="loga/porsche.png" height="33" width="75" alt="Porsche logo"/>
 </section>
 <section id="offer">
     <h6>Most Popular</h6>
