--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     <p>We hapilly cut through the noise and teach designers and devs personally, taking <br>
         a 100% learn-by-doing approach with a zero Powerpoint policy</p>
     <div id="kurzy">
-        <a href="#">Explore Courses</a>
+               <a href="#">Explore Courses</a>
     </div>
     <div id="bootcamp">
-        <a href="#">Join Bootcamps</a>
+              <a href="#">Join Bootcamps</a>
     </div>
     <h6>Trusted by 500,000 Designers in 150 countries</h6>
     <img src="loga/nike logo.png" height="33" width="75"/>
@@ -47,7 +47,7 @@
 <section id="offer">
     <div id="kruh2">Most Popular</div>
     <h2>Our featured <span style="color:orangered">courses</span></h2>
-    <div>
+    <div id="1man">
         <img src="mans/latinman.png" height="100" width="100" alt="man 1"/>
         <article>
             <h5>Digital Marketing Strategy</h5>
@@ -56,7 +56,7 @@
         </article>
     </div>
 
-    <div>
+    <div id="2man">
         <img src="mans/2man.png" height="100" width="100" alt="man 2"/>
         <article>
             <h5>Digital Marketing Strategy</h5>
@@ -65,7 +65,7 @@
         </article>
     </div>
 
-    <div>
+    <div id="3man">
         <img src="mans/man3.png" height="100" width="100" alt="man 3"/>
         <article>
             <h5>Digital Marketing Strategy</h5>
@@ -74,7 +74,7 @@
         </article>
     </div>
 
-    <div>
+    <div id="4man">
         <img src="mans/4man.png" height="100" width="100" alt="man 4"/>
         <article>
             <h5>Digital Marketing Strategy</h5>
@@ -155,7 +155,6 @@
         position: absolute;
         top: 3.6%;
         right: 2%;
-
     }
 
     #main {
@@ -167,6 +166,7 @@
     #main > p {
         font-size: 9px;
         position: relative;
+        margin-bottom: 20px;
     }
     #main > #kruh {
         font-size: 10px;
@@ -188,7 +188,7 @@
         display: inline-flex;
         align-items: center;
         justify-content: center;
-        left: 35%;
+        left: 40%;
         color: white;
         position: absolute;
 
@@ -208,8 +208,8 @@
         justify-content: center;
         text-align: center;
         position: absolute;
-        right: 35%;
-        top: 33%;
+        right: 40%;
+        top: 31.5%;
     }
     #main > #bootcamp > a {
         text-decoration: none;
@@ -217,6 +217,9 @@
     }
     #main > h6 {
         margin-top: 70px;
+    }
+    #main > img {
+        margin-bottom: 20px;
     }
     #offer {
         text-align: center;
@@ -258,6 +261,9 @@
         height: 20px;
         border-radius: 25px;
         align-items: center;
+    }
+    #about > div {
+        margin-top: 40px;
     }
     footer > ul {
         list-style-type: none;
