--- a/index.html
+++ b/index.html
@@ -88,9 +88,11 @@
     <div id="kruh3">The Edukin Advantage</div>
     <h2>About the
         <span style="color:orangered">Edukin?</span></h2>
-    <p>Edukin online video learning platform is perfect for Product Designs teams and individuals to build skills and career confidence.</p>
-    <h4>Acces To Mentors</h4>
-    <p>Get personalized feedback from out experts. Learn from the best practitioners & mentors in the field.</p>
+    <p>Edukin online video learning platform is perfect for Product Designs<br>
+        teams and individuals to build skills and career confidence.</p>
+    <h4>Access To Mentors</h4>
+    <p>Get personalized feedback from out experts. Learn from the best<br>
+        practitioners & mentors in the field.</p>
 </section>
 
 <footer>
@@ -262,6 +264,9 @@
         border-radius: 25px;
         align-items: center;
     }
+    #about > p {
+        font-size: 12px;
+    }
     #about > div {
         margin-top: 40px;
     }
@@ -273,4 +278,5 @@
         padding: 10px;
         margin: 0;
     }
+
 </style>
